--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           on Multi-Modal Video Reasoning and Analyzing Competition (MMVRAC)
         </p>
         <div class="col-6 align-self-center text-left">
-            <a href="https://pypi.org/project/aja-pose/" class="text-green lead" style="color: #00FFAE;margin-left: -15px;">Poster Presentation</a>
+            <a href="https://drive.google.com/file/d/1w97hE0pHIcatOOBHhTqsPD-c8krSaAd3/view?usp=sharing" class="text-green lead" style="color: #00FFAE;margin-left: -15px;">Poster Presentation</a>
           </div>
         
       </div>
