--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <br />
           on Multi-Modal Video Reasoning and Analyzing Competition (MMVRAC)
         </p>
-        <div class="col-6 align-self-center text-left" style="margin-top:60px;">
-            <a href="https://drive.google.com/file/d/1w97hE0pHIcatOOBHhTqsPD-c8krSaAd3/view?usp=sharing" class="text-green lead" style="color: white;margin-left: -15px; background-color: #00FFAE; font-weight: bold; padding: 20px; border-radius: 50px;">Poster Presentation</a>
+        <div class="col-6 align-self-center text-left" style="margin-top:60px; width: 400px;">
+            <a href="https://drive.google.com/file/d/1w97hE0pHIcatOOBHhTqsPD-c8krSaAd3/view?usp=sharing" class="text-green lead" style="color: white;margin-left: -15px; background-color: #00FFAE; font-weight: bold; width: 100%; padding: 20px; border-radius: 50px;">AJA Poster</a>
           </div>
         
       </div>
