feat: Design clean up. Map added1

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         >
           <img src="img/smart-protect-1.jpg" alt="Anti-spam" class="mx-auto" />
           <h4>93.07%</h4>
-          <p>AJA-Pose Model Accuracy on the Validation Set</p>
+          <p>AJA-Pose Model Accuracy on the Test Set</p>
         </div>
         <div
           data-aos="fade-up"
@@ -387,7 +387,7 @@
           data-aos-once="true"
           class="col-md-4 text-center py-4 mt-5"
         >
-        <h4 class="my-4">AUSTIN KABURA</h4>
+        <h4 class="my-4">AUSTIN KABURIA</h4>
         <img
                     src="img/AUSTIN.jpeg"
                     alt="Future Work"
