feat: Design clean up. Map added 2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <style>
       .carousel-item img {
-        max-width: 100%;
+        width: 100%;
         height: auto;
       }
       .carousel-control-prev-icon,
@@ -335,6 +335,7 @@
                     <h2 class="font-weight-bold">Future Work</h2>
                     <p class="my-4">
                         We propose using object detection to dynamically localise regions of interest, reducing noise and improving robustness for better general performance.
+                        
                     </p>
                   </div>
                   <div
@@ -345,6 +346,11 @@
                   >
                     <img
                       src="img/future.png"
+                      alt="Future Work"
+                      class="mx-auto d-block"
+                    />
+                    <img
+                      src="img/future-w.PNG"
                       alt="Future Work"
                       class="mx-auto d-block"
                     />
@@ -485,14 +491,14 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container" style="margin: 0 auto">
             <div class="row justify-content-around">
-                <div class="col-sm-4 col-md-2 py-2 align-self-center image-container">
-                    <a href="https://dekut-dsail.github.io/"><img src="img/dsa-r.png" class="mx-auto d-block" /></a>
+                <div class="col-sm-4 col-md-2 py-2 align-self-center image-container" >
+                    <a href="https://dekut-dsail.github.io/"><img src="img/dsa-r.png" style="width: 100%;" class="mx-auto d-block" /></a>
                 </div>
                 <div class="col-sm-4 col-md-2 py-2 align-self-center image-container">
-                    <a href="https://www.dkut.ac.ke/"><img src="img/ps'.jpeg" class="mx-auto d-block" /></a>
+                    <a href="https://www.dkut.ac.ke/"><img src="img/ps'.jpeg" style="width: 100%;" class="mx-auto d-block" /></a>
                 </div>
                 <div class="col-sm-4 col-md-2 py-2 align-self-center image-container">
-                    <a href="https://2024.ieeeicme.org/"><img src="img/icme-r.png" class="mx-auto d-block" style="object-position: center; object-fit: contain;" /></a>
+                    <a href="https://2024.ieeeicme.org/"><img src="img/icme-r.png" style="width: 100%;" class="mx-auto d-block" style="object-position: center; object-fit: contain;" /></a>
                 </div>
             </div>
         </div>
@@ -557,6 +563,7 @@
           <div
             class="col-md-6 align-self-center text-center text-md-right my-2"
             id="social-media"
+            data-aos="fade-left"
           >
             <a href="https://github.com/kaburia/AJA-pose.git" class="d-inline-block text-center ml-2" id="git">
               <i class="fa fa-github" aria-hidden="true"></i>
@@ -564,7 +571,8 @@
             <a href="tel: +254704883642" class="d-inline-block text-center ml-2" id="git">
               <i class="fa fa-phone" aria-hidden="true"></i>
             </a>
-            <a href="https://maps.app.goo.gl/GR36vDB5mGRXkdXw8" class="d-inline-block text-center ml-2" id="git">
+            <a href="https://maps.app.goo.gl/GR36vDB5mGRXkdXw8"                  
+            class="d-inline-block text-center ml-2" id="git">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
             </a>
             <!-- <a href="#" class="d-inline-block text-center ml-2">
