feat: phone option removed

--- a/index.html
+++ b/index.html
@@ -568,9 +568,9 @@
             <a href="https://github.com/kaburia/AJA-pose.git" class="d-inline-block text-center ml-2" id="git">
               <i class="fa fa-github" aria-hidden="true"></i>
             </a>
-            <a href="tel: +254704883642" class="d-inline-block text-center ml-2" id="git">
+            <!-- <a href="tel: +254704883642" class="d-inline-block text-center ml-2" id="git">
               <i class="fa fa-phone" aria-hidden="true"></i>
-            </a>
+            </a> -->
             <a href="https://maps.app.goo.gl/GR36vDB5mGRXkdXw8"                  
             class="d-inline-block text-center ml-2" id="git">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
