--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>Bootstrap Carousel</title>
+    <title>Aja Pose</title>
     <style>
         .carousel-item img {
             max-width: 100%;
