--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>AJA Pose</title>
-    <meta name="description" content="Free bootstrap template Atlas" />
+    <meta name="description" content="Aja Pose" />
     <link rel="icon" href="img/aja.png" sizes="32x32" type="image/png" />
     <!-- custom.css -->
     <link rel="stylesheet" href="css/custom.css" />
